# SEED-QE-Automation-Framework

./: .gitignore  .s3ignore  Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: upload-yaml-to-s3.yaml
custom_conf/: __init__.py  conf_manager.py  environments_manager.py  initialization.py  lazy_settings.py
custom_conf/config_sources/: __init__.py  file_source.py  remote_source.py
custom_conf/loaders/: __init__.py  env_var_loader.py  file_loader.py  remote_loader.py
custom_conf/teams/seed/intl/gb/prod/: settings.json
custom_conf/teams/seed/intl/gb/stg/: settings.json
custom_conf/teams/seed/intl/irl/dev/: settings.json
custom_conf/teams/seed/intl/pgm/: settings.toml
custom_conf/teams/seed/intl/pgm/tables/: out_sprint_tl_gb_fact.yaml  (+1 more)
data-pipeline/: SEED-EU-FD-PRPHT-LOAD-DAILY.json
data_checks/pgm/tables/: out_trff_lght_mstr_rdx_gb_fact.yaml
data_checks/seed_intl_pgm/: out_trff_lght_mstr_rdx_gb_fact.yaml
data_checks/seed_intl_pgm/tables/: out_trff_lght_mstr_rdx_gb_fact.yaml
input_params/: main_conf.json
tests/: test_seed_data_generic.py  test_seed_data_loading.py  test_try_somethings.py
unit_test/: conf_manager_test.py  env_var_loader_test.py  environments_manager_test.py  file_source_test.py  initialization_test.py  lazy_settings_test.py  remote_loader_test.py
utils/commons/: cloud_connection.py  db_connection.py  file_convert_util.py  file_util.py  path_util.py  polars_cloud_util.py  polars_comp_util.py  polars_sql_util.py  polars_util.py
utils/framework/: config_util.py  path_util.py  s3_utils.py
