[tool.poetry]
name = "seed-qe-automation-framework"
version = "0.1.0"
description = "POC for SEED FY24_Q4 data testing tool"
authors = ["pthi1650 <156160259+pthi1650@users.noreply.github.com>"]
package-mode = false  # Add this line to disable package mode
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = { version = "^0.20.31", extras = ["pyarrow"] }
pyspark = "^3.5.1"
pytest = "^8.2.2"
toml = "^0.10.2"
pyyaml = "^6.0.1"
boto3 = "^1.34.128"
hvac = "^2.2.0"
sqlalchemy = "1.4.48"
pytest-xdist = "^3.6.1"
tenacity = "^8.4.1"
psycopg2 = "^2.9.9"
redshift-connector = "^2.1.2"
sqlalchemy-redshift = "^0.8.14"
pyarrow = "^16.1.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
